--- a/package.json
+++ b/package.json
@@ -5,8 +5,22 @@
 	"author": "Arne Decant",
 	"license": "MIT",
 	"dependencies": {
+		"hammerjs": "^2.0.8",
+		"three": "^0.109.0"
+	},
+	"devDependencies": {
+		"babel-core": "^6.26.3",
+		"babel-loader": "^7.1.5",
+		"babel-plugin-es6-promise": "^1.1.1",
+		"babel-plugin-transform-custom-element-classes": "^0.1.0",
+		"babel-plugin-transform-object-rest-spread": "^6.26.0",
+		"babel-plugin-transform-runtime": "^6.23.0",
+		"babel-polyfill": "^6.26.0",
 		"babel-preset-env": "^1.7.0",
+		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-stage-0": "^6.24.1",
 		"browser-sync": "^2.24.4",
+		"es6-promise": "4.2.8",
 		"del": "^3.0.0",
 		"gulp": "^4.0.0",
 		"gulp-autoprefixer": "^5.0.0",
@@ -19,23 +33,8 @@
 		"gulp-sass": "^4.0.1",
 		"merge-stream": "^1.0.1",
 		"path": "^0.12.7",
-		"three": "^0.109.0",
-		"three.phenomenon": "^1.2.0",
 		"uglifyjs-webpack-plugin": "^1.2.5",
-		"uos": "^1.2.0",
 		"webpack": "^4.8.3",
 		"webpack-stream": "^5.2.1"
-	},
-	"devDependencies": {
-		"babel-core": "^6.26.3",
-		"babel-loader": "^7.1.5",
-		"babel-plugin-es6-promise": "^1.1.1",
-		"babel-plugin-transform-custom-element-classes": "^0.1.0",
-		"babel-plugin-transform-object-rest-spread": "^6.26.0",
-		"babel-plugin-transform-runtime": "^6.23.0",
-		"babel-polyfill": "^6.26.0",
-		"babel-preset-es2015": "^6.24.1",
-		"babel-preset-stage-0": "^6.24.1",
-		"es6-promise": "4.2.8"
 	}
 }
